# suii

./: .gitignore  LICENSE  README.md
object_manipulation/: CMakeLists.txt  package.xml
object_manipulation/launch/: object_manipulation.launch  tfPoints.launch  tftest.launch
object_manipulation/src/: itemManager.py  objectManipulation.py  testItems.py  testMock.py
suii/: CMakeLists.txt  package.xml
suii_bringup/: CMakeLists.txt  package.xml
suii_bringup/config/: amcl_params.yaml  costmap_common.yaml  costmap_common.yaml.save  costmap_global.yaml  costmap_local.yaml  teb_local_planner.yaml
suii_bringup/launch/: base.launch  mapping.launch  navigation.launch  suii_high.launch  suii_low.launch  suii_ref.launch
suii_description/: CMakeLists.txt  package.xml
suii_description/config/: joint_names_suii_description.yaml
suii_description/launch/: display.launch  gazebo.launch
suii_description/meshes/: arm_placeholder.STL  base_link.STL  lidar_front.STL  wheel_left_back.STL  wheel_left_front.STL  wheel_right_back.STL  wheel_right_front.STL
suii_description/urdf/: suii_base.urdf.xacro  suii_description.urdf  suii_description.urdf.xacro
suii_description/urdf/Arm/: ur3.urdf.xacro  ur3_joint_limited_robot.urdf.xacro  ur3_robot.urdf.xacro
suii_drivers/: CMakeLists.txt  package.xml
suii_drivers/src/: clear_costmaps.py  motors.py
suii_lowlevel/: CMakeLists.txt  package.xml
suii_lowlevel/include/suii_lowlevel/: lowlevelcontroller.h  serialMsg.h
suii_lowlevel/msg/: suii_status.msg
suii_lowlevel/src/: lowlevelcontroller.cpp  suii_lowlevel.cpp
suii_msgs/: CMakeLists.txt  package.xml
suii_msgs/action/: pick.action
suii_msgs/msg/: SuiiTask.msg  SuiiTaskList.msg  VisionScanObject.msg
suii_msgs/srv/: DistanceToGoal.srv  Item.srv  ItemDrive.srv  ItemFindhole.srv  ItemMove.srv  ItemPick.srv  ItemPlace.srv  ManipulationAction.srv  ManipulationPose.srv  NavigationGoal.srv  NavigationRepose.srv  UpdateItems.srv  VisionScan.srv  getFreeSpot.srv
suii_navigation/: CMakeLists.txt  README.md  package.xml
suii_navigation/src/: euclidean_calculator.py  manager.py
suii_vision/: CMakeLists.txt  README.md  package.xml
suii_vision/scripts/camera_calibration/: CamRead.py  calibrate_img_from_configfile.py  camera_calibration.py  filter_calibration.py  realsense_test.py
suii_vision/scripts/vision_core/: .yolo.py.swp  README.txt  post_processing.py  post_processing_test.py  post_processing_v2.py  post_processing_v3.py  vision_manager.py  yolo.py  yolo.py.save
suii_vision/scripts/yolo/: processing.py  test.py  yolo.py
suii_vision/scripts/yolo_with_filter/: Livestream.py  dist.npz  mtx.npz  test.py  yolo.py
suii_vision/scripts/yolo_with_filter/config/: full_yolo.cfg  full_yolo.data  full_yolo.names  train.list  valid.list
suii_vision/scripts/yolo_with_filter/train/: calibration_554.txt  calibration_555.txt  calibration_556.txt  calibration_557.txt  calibration_558.txt  calibration_559.txt  calibration_560.txt  calibration_562.txt  calibration_563.txt  calibration_564.txt  calibration_565.txt  calibration_566.txt  calibration_567.txt  calibration_568.txt  calibration_573.txt  calibration_574.txt  calibration_575.txt  calibration_576.txt  calibration_577.txt  calibration_578.txt  calibration_579.txt  calibration_580.txt  calibration_581.txt  calibration_582.txt  calibration_583.txt  calibration_584.txt  calibration_585.txt  calibration_586.txt  calibration_591.txt  calibration_592.txt  calibration_593.txt  calibration_594.txt  calibration_595.txt  calibration_596.txt  calibration_597.txt  calibration_598.txt  calibration_599.txt  calibration_600.txt  calibration_601.txt  calibration_602.txt  (+330 more)
suii_vision/scripts/yolo_with_filter/valid/: calibration_546.txt  calibration_547.txt  calibration_548.txt  calibration_549.txt  calibration_550.txt  calibration_551.txt  calibration_552.txt  calibration_553.txt  calibration_569.txt  calibration_570.txt  calibration_571.txt  calibration_572.txt  calibration_587.txt  calibration_588.txt  calibration_589.txt  calibration_590.txt  calibration_605.txt  calibration_606.txt  calibration_607.txt  calibration_608.txt  (+72 more)
suii_vision/src/: vision_wrapper.py
