<?xml version="1.0"?>
<package format="2">
  <name>suii_bringup</name>
  <version>0.0.0</version>
  <description>Suii robot launch files and units package</description>

  <maintainer email="info@robohub-eindhoven.nl">robohub</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
